[package]
name = "bevy-visualizer"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
description = "Visualize Nyx trajectories with Bevy, inspired by Particular"
publish = false
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-or-later"

[dependencies]
bevy = "0.12.0"
bevy_egui = "0.23.0"
nyx-space = { path = "../../nyx-space" }
